--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--Materialize css icons css-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--
+      <link href="https://fonts.googleapis.com/css?family=Palanquin+Dark" rel="stylesheet">    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
